<?xml version="1.0"?>
<package format="2">
  <name>scripts</name>
  <version>0.0.0</version>
  <description>The scripts package</description>

  <maintainer email="jl17783@bristol.ac.uk">joe louca</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
